--- a/NUT_INT_COMPUT.ipynb
+++ b/NUT_INT_COMPUT.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Chemin des fichiers à utiliser\n",
-    "file_path = './ANNUAL_MEANS_BestAjustRivE_BoostW_BOUCLE/'\n",
+    "file_path = './ANNUAL_MEANS_BestAjustRivE_BoostW_BOUCLE_NEW/'\n",
     "full_list = os.listdir(file_path)\n",
     "full_list.sort()\n",
     "#full_list"
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/dosa/MON_ENV_PYTHON/ARTICLE_IAV\n",
+      "/home/dosa/MON_ENV_PYTHON/LAST_VALID\n",
       "file exist: True\n",
       "Bathy : (160, 394) max : 5054.49 min : 20.5226\n"
      ]
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +203,8 @@
     "    vars()['chl_tot_196_'+str(file[0:4])][:] = np.nan\n",
     "    \n",
     "    # At each lvl\n",
-    "    for z in np.arange(31,43):\n",
+    "    #for z in np.arange(29,43): # 200m\n",
+    "    for z in np.arange(31,43): # 150m\n",
     "        # taking this particular lvl, masking it to avoid useless computations\n",
     "        vars()['chl_tot_196_lvl_'+str(z)] = np.ma.masked_where(bathy<200, chl_tot_196[z,:,:])\n",
     "            \n",
@@ -215,7 +216,8 @@
     "                chl_tot_ij = 0\n",
     "                chl_tot_this_lvl = 0\n",
     "\n",
-    "                for z in np.arange(31,43): # there we need to consider one less lvl\n",
+    "                #for z in np.arange(29,43): # 200m\n",
+    "                for z in np.arange(31,43): # 150m\n",
     "                    #print 'z =', z\n",
     "                    #print 'dz_t =', dz_t[z,i,j]\n",
     "                    #print 'chl_tot =', vars()['chl_tot_196_lvl_'+str(z)][i,j]\n",
@@ -236,7 +238,8 @@
     "    ### Creating NetCDF files for our outputs! ###\n",
     "    dates = []\n",
     "    \n",
-    "    mask_alex = Dataset('./NC_INT_OUTPUTS_ALEX/ChlTot_Int150_'+str(file[0:4])+'.nc', 'w', format='NETCDF4_CLASSIC')\n",
+    "    mask_alex = Dataset('./NC_INT_OUTPUTS_ALEX/Chl_Int150_'+str(file[0:4])+'.nc', 'w', format='NETCDF4_CLASSIC')\n",
+    "    #mask_alex = Dataset('./NC_INT_OUTPUTS_ALEX/Nit_Int200_'+str(file[0:4])+'.nc', 'w', format='NETCDF4_CLASSIC')\n",
     "    \n",
     "    # creating dimensions\n",
     "    time = mask_alex.createDimension('time',1)\n",
@@ -254,7 +257,8 @@
     "    #times[:] = date2num(dates)\n",
     "    #print dates\n",
     "\n",
-    "    mask_t = mask_alex.createVariable('ChlTot_Int_0-151', np.float32, ('time', 'nj_t', 'ni_t'), fill_value=-9999) #'time', \n",
+    "    mask_t = mask_alex.createVariable('Chl_Int_0-151', np.float32, ('time', 'nj_t', 'ni_t'), fill_value=-9999) #'time',\n",
+    "    #mask_t = mask_alex.createVariable('ChlTot_Int_0-212', np.float32, ('time', 'nj_t', 'ni_t'), fill_value=-9999) #'time',\n",
     "    mask_t.units = 'mmol.m-2'\n",
     "    #mask_t.units = 'degrees_Celsius'\n",
     "    \n",
